yaml_parser/tests/fail/invalid-mapping-in-plain-multiline.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 3, column 10
  |
3 |   invalid: x
  |          ^
expected `...`
